// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end_with_newline1: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}

`;

exports[`end_with_newline1: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "Prettier",
      "File",
    ],
    "end_of_line": "CRLF",
    "indent_size": 0,
  },
}
`;

exports[`end_with_newline1: fitness 1`] = `1001`;

exports[`end_with_newline2: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}

`;

exports[`end_with_newline2: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "Prettier",
    ],
    "indent_size": 0,
  },
}
`;

exports[`end_with_newline2: fitness 1`] = `0`;

exports[`end_with_newline3: beautifiedText 1`] = `
if (true) {
helloWorld();
helloWorld();
}
`;

exports[`end_with_newline3: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "Prettier",
      "File",
    ],
    "end_with_newline": false,
    "indent_size": 0,
  },
}
`;

exports[`end_with_newline3: fitness 1`] = `1001`;
